scripts/nullaway/original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/AssertTest.java:53: error: [NullAway] passing @Nullable parameter 'chain' where @NonNull is required
        Assert.assertNull("Chain is not null",chain);
                                              ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields recognizerExpressionsTestcase (line 13), recognizerExpressionsTestsuite (line 14), recognizerTags (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TestReport() {
           ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:27: error: [NullAway] assigning @Nullable expression to @NonNull field
        recognizerExpressionsTestcase = null;
                                      ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:28: error: [NullAway] assigning @Nullable expression to @NonNull field
        recognizerExpressionsTestsuite=null;
                                      ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:29: error: [NullAway] assigning @Nullable expression to @NonNull field
        recognizerTags = null;
                       ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/PatternRecognizer.java:14: error: [NullAway] initializer method does not guarantee @NonNull field matcher (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PatternRecognizer(String expression)throws PatternSyntaxException{
           ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestCase.java:64: error: [NullAway] passing @Nullable parameter 'exception' where @NonNull is required
            tearingDown(exception);
                        ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:24: error: [NullAway] passing @Nullable parameter 'suite.getContext().get("k")' where @NonNull is required
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                                  ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:24: error: [NullAway] passing @Nullable parameter 'suite.getContext().get("h")' where @NonNull is required
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                                                               ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: [NullAway] passing @Nullable parameter '(Double[])suite.getContext().get("list1")' where @NonNull is required
        Assert.assertArrayEquals("Arrays have different value",(Double[])suite.getContext().get("list1"),(Double[])suite.getContext().get("list2"));
                                                               ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: [NullAway] passing @Nullable parameter '(Double[])suite.getContext().get("list2")' where @NonNull is required
        Assert.assertArrayEquals("Arrays have different value",(Double[])suite.getContext().get("list1"),(Double[])suite.getContext().get("list2"));
                                                                                                         ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: [NullAway] unboxing of a @Nullable value
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                   ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: [NullAway] passing @Nullable parameter '(Boolean)suite.getContext().get("trueCondition")' where @NonNull is required
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                   ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:49: error: [NullAway] initializer method does not guarantee @NonNull fields context (line 16), suiteFather (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TestSuite(String testname) {
           ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:55: error: [NullAway] initializer method does not guarantee @NonNull fields context (line 16), suiteFather (line 17), testname (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TestSuite() {
           ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:56: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.testname=null;
                     ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:103: error: [NullAway] passing @Nullable parameter 'exception' where @NonNull is required
                tearingDown(exception);
                            ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:22: error: [NullAway] @NonNull static field testCreator not initialized
    private static TestCreator testCreator;
                               ^
    (see http://t.uber.com/nullaway )
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:17: error: [NullAway] initializer method does not guarantee @NonNull fields nameCase (line 11), time (line 12), throwable (line 13), fileWriter (line 14), printer (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public XmlPrinter() {
           ^
    (see http://t.uber.com/nullaway )
19 errors
